# itunes-visualizer

./: CMakeLists.txt  CMakeSettings.json  README.md  bugfix-notes.txt  homeforlearning.md  testoid  todo-list.md
.github/workflows/: ccpp.yml
experiments/: cubedemo.cpp  cubedemo2.cpp  portaudioTest.cpp  samplevert.vert.glsl
experiments/resources/: samplefrag.frag.glsl
experiments/resources/simpleshader/: simpleshader.frag.glsl  simpleshader.vert.glsl
experiments/resources/texturetest/: samplevert.vert.glsl
experiments/resources/waveshader/: gaussianblur.frag.glsl  screen.frag.glsl  screen.vert.glsl  waveshader.frag.glsl  waveshader.vert.glsl
experiments/texturetest/: samplefrag.frag.glsl
include/: pawrapper.hpp  timing.hpp
include/audiohandlers/: AudioBufferSPSC.hpp  AudioQueue.hpp  AudioReader.hpp  DFT.hpp  VorbisBufferSPSC.hpp  VorbisManager.hpp  VorbisWrapper.hpp
include/audiohandling/: AudioQueue.hpp
include/audioreaders/: AudioReader.hpp  VorbisReader.hpp
include/gl/: GL.hpp  Shader.hpp
include/pawrapper/: AudioQueue.hpp
include/shaders/: AudioShader.hpp  MultiColorShader.hpp  SimpleShader.hpp  WaveShader.hpp
include/vorbis/: stb_vorbis.h
obsolete/: VorbisManagerOld.cpp  VorbisManagerOld.hpp
src/: main.cpp  testoid.cpp
src/audiohandlers/: DFT.cpp  VorbisManager.cpp  stb_vorbis.c
src/audioreaders/: VorbisReader.cpp
src/gl/: GL.cpp  Shader.cpp
src/shaders/: MultiColorShader.cpp  SimpleShader.cpp  WaveShader.cpp
src/timing/: timing.cpp
src/vorbiswrapper/: pawrapper.cpp
stubs/: portaudio.cpp  portaudio.h
tests/: DFTtest.cpp  SPSCPerChanneltest.cpp  SPSCSingleThreadtest.cpp  SPSCtest.cpp  VorbisTest.cpp  Vorbistest.cpp  audioqueuetest.cpp  exampletest.cpp  timingtest.cpp  vorbis_local_only.cpp
tests/stubs/: portaudio.h
